fix page content overflow issues

--- a/source/assets/stylesheets/_pages.scss
+++ b/source/assets/stylesheets/_pages.scss
@@ -2,9 +2,8 @@
 	margin: 0 auto;
 	max-width: 36em;
 	width: 85vw;
-	padding: 0 7.5vw;
-	@media (min-width: 481px) {width: 82.5vw; padding: 0 8.75vw;}
-	@media (min-width: 769px) {width: 80vw; padding: 0 10vw;}
+	@media (min-width: 481px) {width: 82.5vw;}
+	@media (min-width: 769px) {width: 80vw;}
 }
 
 .title--mini {
